--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\MS.Infra\MS.Infra.IoC\MS.Infra.IoC.csproj" />
-    <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Application\MS.Services.Auth.Core.Application.csproj" />
-    <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
-    <ProjectReference Include="..\..\MS.Services.Auth.WebAPI\MS.Services.Auth.WebAPI.csproj" />
-    <ProjectReference Include="..\MS.Services.Auth.Infra.Data\MS.Services.Auth.Infra.Data.csproj" />
+    <PackageReference Include="LcsEverton.MS.Libs.Infra.IoC" Version="1.0.3" />
   </ItemGroup>
+
 
 </Project>
