--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LcsEverton.MS.Libs.Infra.IoC" Version="3.1.0" />
+    <PackageReference Include="LcsEverton.MS.Libs.Infra.IoC" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Application\MS.Services.Auth.Core.Application.csproj" />
     <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
+    <ProjectReference Include="..\..\MS.Services.Auth.Infra.Plugins\MS.Services.Auth.Infra.Plugins.csproj" />
     <ProjectReference Include="..\MS.Services.Auth.Infra.Data\MS.Services.Auth.Infra.Data.csproj" />
   </ItemGroup>
 
