--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
@@ -14,7 +14,8 @@
     <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Application\MS.Services.Auth.Core.Application.csproj" />
     <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
     <ProjectReference Include="..\MS.Services.Auth.Infra.Data\MS.Services.Auth.Infra.Data.csproj" />
-    <ProjectReference Include="..\MS.Services.Auth.Infra.Plugins\MS.Services.Auth.Infra.Plugins.csproj" />
+    <ProjectReference Include="..\MS.Services.Auth.Plugins\MS.Services.Auth.Plugins.csproj" />
+    <ProjectReference Include="..\MS.Services.Auth.Pluguins\MS.Services.Auth.Plugins.csproj" />
   </ItemGroup>
 
 
