--- a/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.IoC/MS.Libs.Infra.IoC.csproj
+++ b/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.IoC/MS.Libs.Infra.IoC.csproj
@@ -8,9 +8,9 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>MS.Libs.Infra.IoC</Title>
     <PackageId>LcsEverton.MS.Libs.Infra.IoC</PackageId>
-	<Version>16.0.0</Version>
+	<Version>17.0.0</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
-    <BaseOutputPath>C:\Users\l9652137\.nuget\packages\lcseverton.ms.libs.infra.ioc\15.0.0\lib</BaseOutputPath>
+    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.infra.ioc\15.0.0\lib</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
