--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.IoC/MS.Services.Auth.Infra.IoC.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LcsEverton.MS.Libs.Infra.IoC" Version="17.0.0" />
+    <PackageReference Include="LcsEverton.MS.Libs.Infra.IoC" Version="21.0.0" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
